--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-jss": "^10.0.0",
     "firebase": "^9.5.0",
+    "node-sass": "5.0.0",
     "react": "^17.0.2",
     "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
