--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-jss": "^10.0.0",
+    "crypto-js": "^4.1.1",
     "firebase": "^9.5.0",
+    "fscreen": "^1.2.0",
     "node-sass": "5.0.0",
     "react": "^17.0.2",
     "react-device-detect": "^2.1.2",
@@ -45,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/fscreen": "^1.0.1"
   }
 }
