--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-jss": "^10.0.0",
     "crypto-js": "^4.1.1",
+    "eslint-plugin-prettier": "^4.0.0",
     "firebase": "^9.5.0",
     "fscreen": "^1.2.0",
     "node-sass": "5.0.0",
@@ -34,6 +35,9 @@
     "extends": [
       "react-app",
       "react-app/jest"
+    ],
+    "plugins": [
+      "prettier"
     ]
   },
   "browserslist": {
