--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "crypto-js": "^4.1.1",
     "eslint-plugin-prettier": "^4.0.0",
     "firebase": "^9.5.0",
+    "firebaseui": "^6.0.1",
     "fscreen": "^1.2.0",
     "node-sass": "5.0.0",
     "prettier": "^2.6.2",
     "react": "^17.0.2",
     "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
+    "react-firebaseui": "^6.0.0",
     "react-jss": "^10.8.2",
     "react-router-dom": "6",
     "react-scripts": "4.0.3",
